# spreto

./: .gitignore  .vimrc  ChangeLog.md  Demo.hs  Makefile  README.md  doctests.hs  spreto.cabal
examples/: alice-fullwidth.txt  alice.txt  oz.txt
src/: AlternateIntroDemo.hs  Cursor.hs  Document.hs  Heredoc.hs  Main.hs  ORP.hs  Options.hs  Position.hs  ProfTextIndex.hs  TextIndex.hs  UI.hs
