name:                spreto
version:             0.1.0.0
synopsis:            A speed-reading tool, inspired by spritz
description:         See README.md
homepage:            https://github.com/rampion/spreto/
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.html, README.md
cabal-version:       >=1.10

executable spreto
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
