name:                spreto
version:             0.1.0.0
synopsis:            A speed-reading tool, inspired by spritz
description:         See README.md
homepage:            https://github.com/rampion/spreto/
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.html, README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/rampion/spreto.git

source-repository this
  type: git
  location: git://github.com/rampion/spreto.git
  tag: v0.1.0.0

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

executable spreto
  main-is:             Main.hs
  other-modules:       TextIndex
                     , Position
                     , Cursor
  -- other-extensions:    
  build-depends: base >=4.10 && <4.11
               , optparse-applicative >= 0.14.0.0
               , text >= 1.2.3.0
               , vector >= 0.12.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -threaded
  if flag(development)
    ghc-options: -O2 -threaded -Wall -Wextra -Werror

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends: base
               , doctest >=0.11.2 && <0.12
               , pretty-show >= 1.6.13 && <2.0.0
  default-language: Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror
